fixed overflows

--- a/css/style.css
+++ b/css/style.css
@@ -137,3 +137,6 @@ h4 {
 footer div {
   margin:5px 0;
 }
+#foot div {
+  overflow:scroll;
+}
